Set width on network sidebar to prevent wrapping of header

--- a/src/components/sidebar/networkView/networkView.scss
+++ b/src/components/sidebar/networkView/networkView.scss
@@ -1,3 +1,4 @@
 .networkView {
     padding: 10px;
+    width: 400px;
 }
